--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,8 +1,20 @@
 <% if current_user %>
-Hi, <%= current_user.name %>
-<%= current_user.email %>
-
+  Hi, <%= current_user.name %>
+  <%= current_user.email %>
   <%= link_to "logout", auth_signout_path, method: :delete %>
 <% else %>
-<%= link_to "Facebook login", "/auth/facebook" %>
+  <%= link_to "Facebook login", "/auth/facebook" %>
+<% end %>
+
+<h1>Show Photos</h1>
+<% @photos.each do |photo| %>
+  <%= image_tag photo.avatar.url(:medium) %>
+<% end %>
+
+
+
+<h1>Upload Photos</h1>
+<%= form_for Photo.new, :url => photos_path, :html => { :multipart => true }, :method => "post" do |f| %>
+  <%= f.file_field :avatar %>
+  <%= f.submit %>
 <% end %>
