--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -8,10 +8,8 @@
 
 <h1>Show Photos</h1>
 <% @photos.each do |photo| %>
-  <%= image_tag photo.avatar.url(:medium) %>
+  <%= link_to image_tag(photo.avatar.url(:medium).to_s), photo_path(photo) %>
 <% end %>
-
-
 
 <h1>Upload Photos</h1>
 <%= form_for Photo.new, :url => photos_path, :html => { :multipart => true }, :method => "post" do |f| %>
