--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -8,7 +8,8 @@
 
 <h1>Show Photos</h1>
 <% @photos.each do |photo| %>
-  <%= link_to image_tag(photo.avatar.url(:medium).to_s), photo_path(photo) %>
+  <%= link_to image_tag(photo.avatar.url(:medium)), photo_path(photo) %>
+  <%= link_to "Like" %>
 <% end %>
 
 <h1>Upload Photos</h1>
