--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,5 +1,10 @@
 <%= form_for @photo do |f| %>
   <%= f.label :title, "Title" %>
   <%= f.text_field :title %>
+
+  <%= f.label :taglist %>
+  <%= f.text_field :taglist %>
+
+
   <%= f.submit %>
 <% end %>
