add friend index and show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,12 @@
 
 <%= yield %>
 
-<%= link_to "中文版", :controller => controller.controller_name,
+<!-- <div class="footer">
+  <%= link_to "中文版", :controller => controller.controller_name,
              :action => controller.action_name, :locale => "TW"  %>
 <%= link_to "English", :controller => controller.controller_name,
              :action => controller.action_name, :locale => "en" %>
+</div> -->
+
 </body>
 </html>
