--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
 <h2>List my friends</h2>
-<% @friends.each do |f|%>
-<%= f.name %>
-<% end %>
+<ul><% @friends.each do |f|%>
+  <li><%= f.name%>
+      <%= link_to "unfriend", unfriend_user_path(f), method: :delete %>
+  </li>
+<% end %></ul>
