ihower code review

--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -7,16 +7,23 @@
 <% end %>
 
 <h1>Show Photos</h1>
+
 <% @photos.each do |photo| %>
+
   <%= link_to image_tag(photo.avatar.url(:medium)), photo_path(photo) %>
-<%if current_user%>
-  <% if photo.can_be_liked?(current_user) %>
+  <%= link_to photo.user.name, user_path(photo.user) %>
+
+  <% if current_user %>
+    <% if photo.can_be_liked?(current_user) %>
       <%= link_to "Like", like_photo_path(photo), :method => :post %>
-    <%else%>
+    <% else %>
       <%= link_to "Unlike", unlike_photo_path(photo), :method => :post %>
   <% end %>
-<%end %>
+
+<% end %>
+
   <%= photo.likes_count %>
+
 <% end %>
 
 <h1>Upload Photos</h1>
