--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,7 @@
       <%= "" %>
     <% else %>
    <%= link_to u.name, user_path(u) %>
-   <%= link_to "Add Friend", addfriend_user_path(u), method: :post %>
+   <%= link_to "Add Friend", addfriend_user_path(current_user, :friend_id => u.id), method: :post %>
    <br>
    <% end %>
  <% end %>
